src/components/Main/index.module.css
.main {
	position: relative;
	background: #161C26;
	color: #fff;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding-top: 5rem;
}

.title {
  font-size: 40px;
  line-height: 50px;
	font-weight: 600;
}

.subTitle {
	color: #7F8FA4;
	font-size: 18px;
	line-height: 24px;
	margin-top: 1rem;
}

.ctas {
  margin-top: 6rem;
  display: flex;
  align-items: baseline;
}

.text {
  margin-top: 1rem;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-weight: 300;
  max-width: 177px;
  text-align: center;
}

.descriptions {
	margin-top: 6rem;
  display: flex;
  flex-direction: column;
	justify-content: space-between;
	padding: 0 15rem;
	z-index: 2;
}

.leftWave {
	position: absolute;
	left: 0;
	z-index: 1;
}

.rightWave {
	position: absolute;
	bottom: 0;
	right: 0;
	z-index: 1;
	transform: scale(-1)
}

/* Media Queries */
@media(max-width: 768px) {
	.descriptions {
		padding: 0 3rem;
	}	
}

@media(max-width: 375px) {
	.main {
		padding-top: 3rem;
	}
	.title {
		text-align: center;
		font-size: 24px;
		line-height: normal;
		padding: 0 2rem;
	}
	.ctas {
		flex-direction: column;
		margin-top: 4rem;
	}
	.descriptions {
		padding: 0 3rem;
	}
}

